kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-webserver-service
spec:
  type: NodePort
  selector:
    app: webserver
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 30080
    - name: https
      port: 443
      targetPort: 443
      nodePort: 30443
