kubernetes/ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-webserver-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - vps-interview.local
    secretName: nginx-tls-secret
  rules:
  - host: vps-interview.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-webserver-service
            port:
              number: 80
